# fancontrol

./: .gitignore  Cargo.toml
extra/: fanctrl.service  sample.conf
extra/archlinux/: PKGBUILD  docker-install-test.sh  fancontrol-0.1-2-x86_64.pkg.tar  fanctrl.install
src/: main.rs  udevpoll.rs
src/config/: ast.rs  conffile.lalrpop  mod.rs  symboltable.rs
src/config/checker/: checker.rs  error.rs  mod.rs  model.rs
src/device/: dev.rs  hwmon.rs  mod.rs  nct6775.rs  registry.rs  udevutil.rs
src/device/drivers/: devlog.rs  hwmon.rs  mod.rs  nct6775.rs
src/types/: mod.rs  percent.rs  temp.rs  units.rs
src/util/: biggernum.rs  mod.rs
