[package]
name = "fancontrol"
version = "0.1.0"
authors = ["Roberto Guillén"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
udev = { git = "https://github.com/devcexx/udev-rs" }
targeted_log = { git = "https://github.com/devcexx/targeted_log" }
bounded_nums = { git = "https://github.com/devcexx/bounded_nums", rev = "8ffde34f" }
lalrpop-util = "0.19"
regex = "1"
derive-new = "0.5"
log = "0.4"
env_logger = "0.8"
clap = "2.33"
lazy_static = "1.4"